--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
 
     <div class="filters">
-      <button data-filter="all" class="filter-btn active">Tất cả</button>
-      <button data-filter="active" class="filter-btn">Chưa xong</button>
-      <button data-filter="completed" class="filter-btn">Đã xong</button>
+      <button data-filter="all" class="filter-btn active">All</button>
+      <button data-filter="active" class="filter-btn">Not yet</button>
+      <button data-filter="completed" class="filter-btn">Done</button>
     </div>
 
     <div class="list" id="todos"></div>
