--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </form>
 
     <div class="info">
-      <p>Tổng có <span id="countAll">0</span> nhiệm vụ.</p>
-      <p>Đã hoàn thành <span id="countComplete">0</span> nhiệm vụ.</p>
+      <p>Total <span id="countAll">0</span> tasks.</p>
+      <p>Completed <span id="countComplete">0</span> tasks.</p>
     </div>
 
     <div class="filters">
